# pylint-venv

./: .gitignore  CHANGES.md  LICENSE  LICENSE.txt  README.rst  pylint_venv.py  pyproject.toml  setup.py
.github/workflows/: ci.yml
test/: pylintrc  pyproject.toml  test.sh
